<resources>
    <string name="app_written">Application Written By Raúl R.C</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9438738341601496/2316137167</string>
    <string name="app_name" translatable="false">myNetworks</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="devide_m">Device Info</string>
    <string name="wifi_m">Wifi analizer</string>
    <string name="ports_m">Ports analizer</string>
    <string name="test_m">Speed test</string>
    <string name="intensidad_red">Signal strength</string>
    <string name="ippublica">Public IP:</string>
    <string name="iplocal">Local IP:</string>
    <string name="gateway">Gateway:</string>
    <string name="masacarasubred">Subnet Mask:</string>
    <string name="desconocido">Unknown</string>
    <string name="nodisponible">Not available</string>
    <string name="isp" translatable="false">ISP:</string>
    <string name="country">Country:</string>
    <string name="countrycode">Country code:</string>
    <string name="city">City:</string>
    <string name="regioncode">Region code:</string>
    <string name="regionname">Region:</string>
    <string name="zip">Zip Code:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="infonet">Network info</string>
    <string name="infoip">IP info</string>
    <string name="my_mail" translatable="false">support@wepica.com</string>
    <string name="common">COMMON</string>
    <string name="trojans">TROJANS</string>
    <string name="games">GAMES</string>
    <string name="others">OTHERS</string>
    <string name="otros">Others</string>
    <string name="alls">ALLS</string>
    <string name="custom">CUSTOM</string>
    <string name="ipnovalida">The Ip/Host is invalid.</string>
    <string name="puertosnovalidos">The number or format of ports is invalid. (1-65535)</string>
    <string name="necesitaInet">Active internet connection is required.</string>
    <string name="procesando">Processing...</string>
    <string name="p_abiertos">Opened (#)</string>
    <string name="p_cerrados">Closed (#)</string>
    <string name="p_time" translatable="false">TimeOut (#)</string>
    <string name="host" translatable="false">Host:</string>
    <string name="dns1" translatable="false">DNS 1:</string>
    <string name="dns2" translatable="false">DNS 2:</string>
    <string name="loading">Loading data...</string>
    <string name="copied">copied to clipboard</string>
    <string name="inspector">Wifi Inspector</string>
    <string name="changelog" translatable="false">Changelog</string>
    <string name="license">About</string>
    <string name="info">Information</string>
    <string name="compilacion">Build Date</string>
    <string name="conectewifi">Please, you have to connect to a wireless network.</string>
    <string name="midevice">MY DEVICE</string>
    <string name="sinconexion">No network</string>
    <string name="sinconexionamp">Not connected to a Wi-Fi network</string>
    <string name="share_app">Try the App \"myNetworwk\", all the information about your network at a glance.\n -Information about your net.\n-Check if someone is using your net.\n-Scan any port.\n-Many other things.\n\n</string>
    <string name="contacto">Contact</string>
    <string name="ports">Ports</string>
    <string name="iphost">Ip or Hostname</string>
    <string name="timeip" translatable="false">TimeOut</string>
    <string name="no_name">Unnamed</string>
    <string name="custom_name">Custom name</string>
    <string name="enter_name">Enter a name</string>
    <string name="titu_idiomas">Languages</string>
    <string name="p1_idiomas">If you want to collaborate with the translations you just have to click on the following link</string>
    <string name="p2_idiomas">Mobile Version</string>
    <string name="p3_idiomas">Desktop Version</string>
    <string name="url1_idiomas" translatable="false">https://mynetworks.oneskyapp.com/mobile</string>
    <string name="url2_idiomas" translatable="false">https://mynetworks.oneskyapp.com</string>
    <string name="title_privacy_policy">Privacy policy</string>

</resources>
